--- a/Week_02_--_Introduction_to_JavaScript/example01.html
+++ b/Week_02_--_Introduction_to_JavaScript/example01.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset='UTF-8">
+    <meta charset="UTF-8">
     <title>Multiplication</title>
 </head>
 <body>
 <h1>Multiply</h1>
+<p id="Time"></p>
 <p>Multiplicand: <input type="text" id="multiplicand" value="0"
 onchange="multiply()"></p>
 <p>Multiplier: <input type="text" id="multiplier" value="0"
 onchange="multiply()"></p>
 <div>
-<p><span id="showMulipicand">0</span> × <span id="showMultiplier">0</span>
+<p><span id="showMultipicand">0</span> × <span id="showMultiplier">0</span>
             = <span id="showProduct">0</span></p>
     </div>
     <script src="multiply.js"></script>
