--- a/Week_02_--_Introduction_to_JavaScript/example01.html
+++ b/Week_02_--_Introduction_to_JavaScript/example01.html
@@ -12,9 +12,17 @@ onchange="multiply()"></p>
 <p>Multiplier: <input type="text" id="multiplier" value="0"
 onchange="multiply()"></p>
 <div>
-<p><span id="showMultipicand">0</span> × <span id="showMultiplier">0</span>
+<p><span id="multipicand">0</span> × <span id="multiplier">0</span>
             = <span id="showProduct">0</span></p>
-    </div>
-    <script src="multiply.js"></script>
+    </div> 
+     function multiply() {
+         let x=document.getElementById ("multiplicand").value;
+         console.log("multiplicand is" + x);
+         let y=document.getElementById ("multiplier").value;
+         console.log("multiplier is"+ y);
+         let z=x*y;
+         document.getElementById("showProduct").innerHTML=Z;
+     }
+    <script src=></script>
 </body>
 </html>
