trying something new

--- a/Week_02_--_Introduction_to_JavaScript/example01.html
+++ b/Week_02_--_Introduction_to_JavaScript/example01.html
@@ -5,24 +5,19 @@
     <title>Multiplication</title>
 </head>
 <body>
+<script>multiply.js</script>
 <h1>Multiply</h1>
-<p id="Time"></p>
+
+
 <p>Multiplicand: <input type="text" id="multiplicand" value="0"
 onchange="multiply()"></p>
 <p>Multiplier: <input type="text" id="multiplier" value="0"
 onchange="multiply()"></p>
 <div>
-<p><span id="multipicand">0</span> × <span id="multiplier">0</span>
+<p><span id="multipicand">0</span> x <span id="multiplier">0</span>
             = <span id="showProduct">0</span></p>
     </div> 
-     function multiply() {
-         let x=document.getElementById ("multiplicand").value;
-         console.log("multiplicand is" + x);
-         let y=document.getElementById ("multiplier").value;
-         console.log("multiplier is"+ y);
-         let z=x*y;
-         document.getElementById("showProduct").innerHTML=Z;
-     }
-    <script src=></script>
+   
+  
 </body>
 </html>
