answer ok,, expression doesn't display

--- a/Week_02_--_Introduction_to_JavaScript/example01.html
+++ b/Week_02_--_Introduction_to_JavaScript/example01.html
@@ -2,22 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Multiplication</title>
+    <title>Multiplicaton</title>
 </head>
 <body>
-<script>multiply.js</script>
-<h1>Multiply</h1>
-
-
-<p>Multiplicand: <input type="text" id="multiplicand" value="0"
-onchange="multiply()"></p>
-<p>Multiplier: <input type="text" id="multiplier" value="0"
-onchange="multiply()"></p>
-<div>
-<p><span id="multipicand">0</span> x <span id="multiplier">0</span>
-            = <span id="showProduct">0</span></p>
-    </div> 
-   
-  
+    <h1>Mutiply by Brenda</h1>
+    <p>Multiplicand: <input type="text" id="multiplicand"  onchange="multiply()"></p>
+    <p>Multiplier: <input type="text" id="multiplier"  onchange="multiply()"></p>
+    <div>
+        <p><span id="Showmultipicand">0</span> × <span id="Showmultiplier">0</span>
+            = <span id="showProduct"></span></p>
+    </div>
+    <script src="multiply.js"></script>
 </body>
 </html>
