css selectors files added.

--- a/Unit_04_--_JQuery/sample_code_for_JQuery/410_SelectorSampleCode/playingWithSelectors.html
+++ b/Unit_04_--_JQuery/sample_code_for_JQuery/410_SelectorSampleCode/playingWithSelectors.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Selectors</title>
+    <link rel="stylesheet" 
+    type="text/css" href="410_style.css">
 </head>
 <body>
+    <div id=header>
+        <h1>Styling</h1>
+    </div>
     <div id="state">
         <h2>Missouri</h2>
-        <p>I live in <span>Missour</span> which is known as the <span>"Show Me" State</span>.</p>
+        <p>I live in <span>Missouri</span> which is 
+            known as the <span>"Show Me" State</span>.</p>
         <h3>Some Missouri Cities</h3>
         <ul>
             <li>Kansas City</li>
@@ -15,7 +21,25 @@
             <li>Saint Joseph</li>
             <li>Springfield</li>
         </ul>
-        <p><img src=""></p>
     </div>
+    
+    <div id="literature">
+        <p>It was a <span>dark</span> and stormy night.</p>
+        <div>
+            <p>In her attic bedroom Margaret Murry, wrapped in an old patchwork quilt, sat on the foot of her bed and watched the trees tossing in the frenzied lashing of the wind. </p>
+        </div>
+        <p>Behind the trees clouds scudded frantically across the sky. Every few moments the moon ripped through them, creating wraithlike shadows that raced along the ground.</p>
+    </div>
+
+    <div id=courses>
+        <h2>Courses</h2>
+        <div><a href="http://griff.vn/schedule">Schedule</a></div>
+        <ul>
+            <li>ACT 301</li>
+            <li>ACT 311</li>
+            <li>CSC 254</li>
+        </ul>
+    </div>
+    <div id="card"></div>
 </body>
 </html>
