--- a/Unit_04_--_JQuery/sample_code_for_JQuery/420_JQueryOverview/overview.html
+++ b/Unit_04_--_JQuery/sample_code_for_JQuery/420_JQueryOverview/overview.html
@@ -42,10 +42,8 @@
     <div id="card">
         <img alt="Ace of Hearts" src="https://raw.githubusercontent.com/noynaert/act311spring2019/master/Unit_04_--_JQuery/sample_code_for_JQuery/410_SelectorSampleCode/ace_of_hearts.png">
     </div>
-    <script>
-    $("#card").fadeOut(10000);
-    $("#state ul").slideUp(2000).slideDown(2000);
-    $("card").fadeIn("slow");
-    </script>
+   <script>
+   $("#card").fadeOut("slow");
+   </script>
 </body>
 </html>
