--- a/Unit_04_--_JQuery/sample_code_for_JQuery/420_JQueryOverview/overview.html
+++ b/Unit_04_--_JQuery/sample_code_for_JQuery/420_JQueryOverview/overview.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>JQueryPlayground 420</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
     <div id=header>
@@ -42,6 +43,7 @@
         <img alt="Ace of Hearts" src="https://raw.githubusercontent.com/noynaert/act311spring2019/master/Unit_04_--_JQuery/sample_code_for_JQuery/410_SelectorSampleCode/ace_of_hearts.png">
     </div>
    <script>
+       $("#states").fadeOut(10000);
    </script>
 </body>
 </html>
