--- a/Unit_04_--_JQuery/sample_code_for_JQuery/420_JQueryOverview/overview.html
+++ b/Unit_04_--_JQuery/sample_code_for_JQuery/420_JQueryOverview/overview.html
@@ -43,7 +43,7 @@
         <img alt="Ace of Hearts" src="https://raw.githubusercontent.com/noynaert/act311spring2019/master/Unit_04_--_JQuery/sample_code_for_JQuery/410_SelectorSampleCode/ace_of_hearts.png">
     </div>
    <script>
-       $("#states").fadeOut(10000);
+       $("#card").fadeOut("slow");
    </script>
 </body>
 </html>
