Add text of 430 jQuery_Mechanics

--- a/Unit_04_--_JQuery/sample_code_for_JQuery/420_JQueryOverview/overview.html
+++ b/Unit_04_--_JQuery/sample_code_for_JQuery/420_JQueryOverview/overview.html
@@ -43,7 +43,9 @@
         <img alt="Ace of Hearts" src="https://raw.githubusercontent.com/noynaert/act311spring2019/master/Unit_04_--_JQuery/sample_code_for_JQuery/410_SelectorSampleCode/ace_of_hearts.png">
     </div>
    <script>
-       $("#card").fadeOut("slow");
+       jQuery("#card").fadeOut("slow");
+       //$("#state").fadeOut(10000).fadeIn(5000);
+       $("#courses li").slideUp(4000).slideDown(4000);
    </script>
 </body>
 </html>
